Fixed: Water drops should get smaller as they go faster
Fixed: Fluid Density text field is not wide enough to display the value (problem in all modules)
Fixed: On Mac, in default locations, pressure sensors are partially obscured by control panel
Proposed solution for faucet slider not being vertically centered in faucet handle on mac
Converted horizontal layout to vertical for faucet radio buttons
Converted from ButtonExpander to MinimizeMaximizeNode for fluid density control
Converted control panels to use ControlPanelNode
Made the handle on the top of the water tower 25% bigger
# 0.00.11 (48549) Feb 2, 2011
Added a hole in the top of the water tower
# 0.00.10 (48517) Feb 2, 2011
Added a hole in the water tank
Made slider door act binary instead of continuous
Use up-down cursor for tank and sider door
Renamed "auto" to "match leakage"
In "match leakage", hide the manual slider
Added internationalization
# 0.00.09 (48472) Feb 1, 2011
Improved the default locations for the pressure and velocity sensors in the water tower tab
Added the ability to measure pressure in the water tank water
Made fluid color a function of density in water tower tab
Fixed: ruler changes location when changing units
Added english units to measuring tape
Fixed: Faucet should shut off when tank full
Fixed: Reset all broken
Fixed: Faucet slider should gray out when in "auto" mode
Added measuring tape
Fixed the size of the rulers in the water tower tab
Fixed: Velocity sensor should read out water velocity
Fixed: water drops should have size based on water volume, so low trickle is lots of drops.
Fixed: water should look less particulate
Fixed: water drops should be absorbed when they hit the ground
Wired up faucet manual slider to model
Fixed: decrease in volume should be proportional to water velocity
Improved water faucet model
Wired up faucet buttons to model
Made water velocity vary as v=sqrt(2*g*h)
Made water only leak out when hole uncovered